Commit from Pingendo

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          <h1 class="display-1">Title</h1>
+          <h1 class="display-1">Moonaventura</h1>
         </div>
         <div class="col-md-4">
-          <h1 class="">Heading</h1>
+          <h1 class="">Dream.Adventure.Travel</h1>
         </div>
       </div>
     </div>
